:sparkles: Feat/(#98, S11P31D207-264): 복약 삭제 api